data/derived/sp14/progs/unify/prog0074.ml.out
Characters 8-17:
  let _ = max_float-min_float;;
          ^^^^^^^^^
Error: This expression has type float but an expression was expected of type
         int
